--- a/front-end/webapp/src/app/modules/core/components/table/table.component.html
+++ b/front-end/webapp/src/app/modules/core/components/table/table.component.html
@@ -27,6 +27,6 @@
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 	<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
-<div class="mat-h3 no-data" *ngIf="dataSource?.data?.length === 0">
+<div class="mat-h3 table-no-data" *ngIf="dataSource?.data?.length === 0">
 	<span [translate]="'messages.NO_DATA'"></span>
 </div>
