--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -3,11 +3,11 @@
 		<h2 [translate]="'internaciones.anamnesis.TITLE'"></h2>
 		<h4 [translate]="'internaciones.anamnesis.SUBTITLE'"></h4>
 	</section>
+	<section id="antecedentes-personales">
+		<app-antecentes-personales></app-antecentes-personales>
+	</section>
 
 	<section id="observations">
-
-		<app-antecentes-personales></app-antecentes-personales>
-
 		<h3 [translate]="'internaciones.anamnesis.observations.TITLE'"></h3>
 
 		<form [formGroup]="form" (ngSubmit)="save()">
