--- a/front-end/webapp/src/app/modules/internacion/components/antecentes-personales/antecentes-personales.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/antecentes-personales/antecentes-personales.component.html
@@ -1,11 +1,36 @@
-<div class="container">
-	<section>
-		<h3 [translate]="'internaciones.anamnesis.antecedentes-personales.TITLE'"></h3>
-		<app-concepts-search (onSelect)=setConcept($event)></app-concepts-search>
-	</section>
+<h3 class="mat-h2" [translate]="'internaciones.anamnesis.antecedentes-personales.TITLE'"></h3>
+<mat-card>
+	<mat-card-content>
+		<app-concepts-search
+			[text]="'internaciones.anamnesis.antecedentes-personales.table.columns.PROBLEM_TYPE'"
+			(onSelect)=setConcept($event)>
+		</app-concepts-search>
+		<!-- form -->
+	</mat-card-content>
+</mat-card>
 
-	<section>
-		<h3 class="mat-body-2" [translate]="'internaciones.anamnesis.antecedentes-personales.table.TITLE'"></h3>
-		<app-table [model]="antecedentesPersonalesTable" [tableClass]="'secondary'"></app-table>
-	</section>
-</div>
+<section>
+	<h3 class="mat-body-2" [translate]="'internaciones.anamnesis.antecedentes-personales.table.TITLE'"></h3>
+	<table mat-table [dataSource]="apDataSource">
+
+		<ng-container *ngFor="let column of columns" [matColumnDef]="column.def">
+			<th *matHeaderCellDef>{{ column.header | translate }}</th>
+			<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
+		</ng-container>
+
+		<ng-container matColumnDef="remove">
+			<th mat-header-cell *matHeaderCellDef></th>
+			<td mat-cell *matCellDef="let element">
+				<button mat-icon-button color="warn" (click)="remove(element)">
+					<mat-icon>delete_outline</mat-icon>
+				</button>
+			</td>
+		</ng-container>
+
+		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+	</table>
+	<div class="mat-h3 table-no-data" *ngIf="apDataSource.data.length === 0">
+		<span [translate]="'messages.NO_DATA'"></span>
+	</div>
+</section>
