tg-143 acomoda estilos de pantalla anamnesis

--- a/front-end/webapp/src/app/modules/internacion/components/antecentes-personales/antecentes-personales.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/antecentes-personales/antecentes-personales.component.html
@@ -55,7 +55,7 @@
 				</mat-form-field>
 			</div>
 
-			<div>
+			<div class="flex-button">
 				<button mat-raised-button color="primary" type="submit">
 					<span [translate]="'internaciones.anamnesis.antecedentes-personales.ADD'"></span>
 				</button>
