--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -26,10 +26,11 @@
 		}
 	}
 
-	div.table-no-data.mat-h3 {
+	div.table-no-data {
 		padding: 30px 0;
 		text-align: center;
 		border: solid 1px #A8A8A8;
+		background-color: white;
 	}
 
 	table.mat-table {
