--- a/front-end/webapp/src/app/modules/pacientes/component/pacientes-table/pacientes-table.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/pacientes-table/pacientes-table.component.html
@@ -1,48 +1,5 @@
-<mat-form-field>
-	<mat-label>Filtro</mat-label>
-	<input matInput (keyup)="applyFilter($event)" placeholder="">
-</mat-form-field>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-	<ng-container matColumnDef="ID Paciente">
-		<th mat-header-cell *matHeaderCellDef>ID Paciente</th>
-		<td mat-cell *matCellDef="let element"> {{element.id}} </td>
-	</ng-container>
-
-	<ng-container matColumnDef="Nro. Documento">
-		<th mat-header-cell *matHeaderCellDef>Nro. Documento</th>
-		<td mat-cell *matCellDef="let element"> {{element.identificationNumber}} </td>
-	</ng-container>
-
-	<ng-container matColumnDef="Nombre">
-		<th mat-header-cell *matHeaderCellDef>Nombre</th>
-		<td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
-	</ng-container>
-
-	<ng-container matColumnDef="Apellido">
-		<th mat-header-cell *matHeaderCellDef>Apellido</th>
-		<td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
-	</ng-container>
-
-	<ng-container matColumnDef="F. Nac">
-		<th mat-header-cell *matHeaderCellDef>F. Nac</th>
-		<td mat-cell *matCellDef="let element"> {{element.birthDate}} </td>
-	</ng-container>
-
-	<ng-container matColumnDef="Sexo">
-		<th mat-header-cell *matHeaderCellDef>Sexo</th>
-		<td mat-cell *matCellDef="let element"> {{genderOptions[element.genderId]}} </td>
-	</ng-container>
-
-	<ng-container matColumnDef="Action">
-		<th mat-header-cell *matHeaderCellDef></th>
-		<td mat-cell *matCellDef="let element">
-			<button mat-flat-button color="primary" (click)="actionRow()">
-				Ver
-			</button>
-		</td>
-	</ng-container>
-
-	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<div class="container">
+	<section>
+		<app-table [model]="allPatient" [tableClass]="'mat-elevation-z8'"></app-table>
+	</section>
+</div>
