--- a/front-end/webapp/src/app/modules/internacion/components/antecentes-personales/antecentes-personales.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/antecentes-personales/antecentes-personales.component.html
@@ -8,7 +8,7 @@
 		<form [formGroup]="form" (ngSubmit)="save()">
 
 			<div>
-				<mat-form-field>
+				<mat-form-field appearance="outline">
 					<mat-label [translate]="'internaciones.anamnesis.antecedentes-personales.form.REGISTRY_DATE'"></mat-label>
 					<input matInput readonly id="date"
 						   [matDatepicker]="myDatepicker"
@@ -34,7 +34,7 @@
 			</div>
 
 			<div>
-				<mat-form-field>
+				<mat-form-field appearance="outline">
 					<mat-label [translate]="'internaciones.anamnesis.antecedentes-personales.form.CONDITION_VERIFICATION_STATUS'"></mat-label>
 					<mat-select formControlName="verificationId" name="verificationId">
 						<mat-option *ngFor="let verification of conditionsVerification" [value]="verification.id">
@@ -45,7 +45,7 @@
 			</div>
 
 			<div>
-				<mat-form-field>
+				<mat-form-field appearance="outline">
 					<mat-label [translate]="'internaciones.anamnesis.antecedentes-personales.form.CONDITION_CLINICAL_STATUS'"></mat-label>
 					<mat-select formControlName="statusId" name="statusId">
 						<mat-option *ngFor="let clinicalStatus of conditionsClinicalStatus" [value]="clinicalStatus.id">
@@ -66,7 +66,7 @@
 
 <section>
 	<h3 class="mat-body-2" [translate]="'internaciones.anamnesis.antecedentes-personales.table.TITLE'"></h3>
-	<table mat-table [dataSource]="apDataSource">
+	<table mat-table [dataSource]="apDataSource" class="secondary">
 
 		<ng-container *ngFor="let column of columns" [matColumnDef]="column.def">
 			<th *matHeaderCellDef>{{ column.header | translate }}</th>
