--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -1,80 +1,66 @@
 <div class="container">
 	<section>
-		<h2 [translate]="'internaciones.anamnesis.TITLE'"></h2>
-		<h4 [translate]="'internaciones.anamnesis.SUBTITLE'"></h4>
+		<h2 class="page-title" [translate]="'internaciones.anamnesis.TITLE'"></h2>
+		<h3 [translate]="'internaciones.anamnesis.SUBTITLE'"></h3>
+	</section>
+	<section id="diagnosticos">
+		<app-diagnosticos></app-diagnosticos>
 	</section>
 	<section id="antecedentes-personales">
 		<app-antecentes-personales></app-antecentes-personales>
 	</section>
 
 	<section id="observations">
-		<h3 [translate]="'internaciones.anamnesis.observations.TITLE'"></h3>
+		<h2 [translate]="'internaciones.anamnesis.observations.TITLE'"></h2>
 
 		<form [formGroup]="form" (ngSubmit)="save()">
 			<div>
-				<div>
-					<mat-label [translate]="'internaciones.anamnesis.observations.CURRENT_DISEASE'"></mat-label>
-				</div>
+				<mat-label [translate]="'internaciones.anamnesis.observations.CURRENT_DISEASE'"></mat-label>
 				<mat-form-field [floatLabel]="'never'" appearance="outline">
 					<textarea matInput type="text" id="current_disease" name="current_disease"
 						formControlName="current_disease"
 						placeholder="{{'internaciones.anamnesis.observations.DESCRIPTION' | translate }}">
-							</textarea>
+								</textarea>
 				</mat-form-field>
 			</div>
-
 			<div>
-				<div>
-					<mat-label [translate]="'internaciones.anamnesis.observations.PHYSICAL_EXAMINATION'"></mat-label>
-				</div>
+				<mat-label [translate]="'internaciones.anamnesis.observations.PHYSICAL_EXAMINATION'"></mat-label>
 				<mat-form-field [floatLabel]="'never'" appearance="outline">
 					<textarea matInput type="text" id="physical_examination" name="physical_examination"
 						formControlName="physical_examination"
 						placeholder="{{'internaciones.anamnesis.observations.DESCRIPTION' | translate }}">
-							</textarea>
+								</textarea>
 				</mat-form-field>
 			</div>
-
 			<div>
-				<div>
-					<mat-label [translate]="'internaciones.anamnesis.observations.STUDIES_PROCEDURES'"></mat-label>
-				</div>
+				<mat-label [translate]="'internaciones.anamnesis.observations.STUDIES_PROCEDURES'"></mat-label>
 				<mat-form-field [floatLabel]="'never'" appearance="outline">
 					<textarea matInput type="text" id="studies_procedures" name="studies_procedures"
 						formControlName="studies_procedures"
 						placeholder="{{'internaciones.anamnesis.observations.DESCRIPTION' | translate }}">
-							</textarea>
+								</textarea>
 				</mat-form-field>
 			</div>
-
 			<div>
-				<div>
-					<mat-label [translate]="'internaciones.anamnesis.observations.PATIENT_PROGRESS'"></mat-label>
-				</div>
+				<mat-label [translate]="'internaciones.anamnesis.observations.PATIENT_PROGRESS'"></mat-label>
 				<mat-form-field [floatLabel]="'never'" appearance="outline">
 					<textarea matInput type="text" id="patient_progress" name="patient_progress"
 						formControlName="patient_progress"
 						placeholder="{{'internaciones.anamnesis.observations.DESCRIPTION' | translate }}">
-							</textarea>
+								</textarea>
 				</mat-form-field>
 			</div>
-
 			<div>
-				<div>
-					<mat-label [translate]="'internaciones.anamnesis.observations.CLINICAL_IMPRESSION'"></mat-label>
-				</div>
+				<mat-label [translate]="'internaciones.anamnesis.observations.CLINICAL_IMPRESSION'"></mat-label>
 				<mat-form-field [floatLabel]="'never'" appearance="outline">
 					<textarea matInput type="text" id="clinical_impression" name="clinical_impression"
 						formControlName="clinical_impression"
 						placeholder="{{'internaciones.anamnesis.observations.DESCRIPTION' | translate }}">
-							</textarea>
+								</textarea>
 				</mat-form-field>
 			</div>
-
 			<div>
-				<div>
-					<mat-label [translate]="'internaciones.anamnesis.observations.OTHERS'"></mat-label>
-				</div>
+				<mat-label [translate]="'internaciones.anamnesis.observations.OTHERS'"></mat-label>
 				<mat-form-field [floatLabel]="'never'" appearance="outline">
 					<textarea matInput type="text" id="others" name="others" formControlName="others"
 						placeholder="{{'internaciones.anamnesis.observations.DESCRIPTION' | translate }}">
@@ -83,11 +69,11 @@
 			</div>
 
 			<div class="form-buttons">
-				<div>
-					<button mat-stroked-button>
-						<span class="uppercase">Volver</span>
+				<div class="buttons">
+					<button mat-stroked-button color="primary">
+						<span class="uppercase" (click)="back()">Volver</span>
 					</button>
-					<button mat-stroked-button>
+					<button mat-stroked-button color="primary">
 						<span class="uppercase">Guardar borrador</span>
 					</button>
 				</div>
@@ -98,7 +84,6 @@
 					</button>
 				</div>
 			</div>
-
 		</form>
 	</section>
 </div>
