--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -19,6 +19,7 @@
 
 @mixin mat-table($theme) {
 	$primary-palette: map-get($theme, primary);
+	$accent-palette: map-get($theme, accent);
 
 	app-table {
 		.mat-form-field {
@@ -30,6 +31,8 @@
 		padding: 30px 0;
 		text-align: center;
 		border: solid 1px #A8A8A8;
+		color: mat-color($accent-palette, default);
+		font-weight: bold;
 		background-color: white;
 	}
 
