--- a/front-end/webapp/src/app/modules/internacion/components/routes/anamnesis/anamnesis.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/components/routes/anamnesis/anamnesis.component.scss
@@ -5,4 +5,9 @@
 	& > *:first-child {
 		width: 100%;
 	}
+	.sticky {
+		position: -webkit-sticky; /* Safari */
+		position: sticky;
+		top: 8%;
+	}
 }
