--- a/front-end/webapp/src/app/modules/internacion/components/routes/home/internaciones-home.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/routes/home/internaciones-home.component.html
@@ -1,6 +1,6 @@
 <app-content width="full">
 	<section>
-		<h2 [translate]="'internaciones.internados-table.TITLE'"></h2>
+		<h2 class="page-title" [translate]="'internaciones.internados-table.TITLE'"></h2>
 		<app-internaciones-table></app-internaciones-table>
 	</section>
 </app-content>
