--- a/front-end/webapp/src/app/modules/internacion/components/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/routes/internacion-paciente/internacion-paciente.component.html
@@ -1,6 +1,6 @@
 <app-content width="full">
 	<section>
-		<h2 [translate]="'internaciones.internacion-paciente.TITLE'"></h2>
+		<h2 class="page-title" [translate]="'internaciones.internacion-paciente.TITLE'"></h2>
 		<div class="buttons">
 			<button mat-flat-button color="primary" (click)="goToAnamnesis()">
 				<span class="uppercase" [translate]="'internaciones.internacion-paciente.actions.ADD_EVAL_INGRESO'"></span>
