--- a/front-end/webapp/src/app/modules/pacientes/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/home/home.component.html
@@ -1,10 +1,10 @@
 <app-content width="full">
 	<section>
-		<h2 [translate]="'pacientes.home.TITLE'"></h2>
+		<h2 class="page-title" [translate]="'pacientes.home.TITLE'"></h2>
 		<app-search-create></app-search-create>
 	</section>
 	<section>
-		<h2 [translate]="'pacientes.home.TITLE_SEARCH'"></h2>
+		<h2 class="page-title" [translate]="'pacientes.home.TITLE_SEARCH'"></h2>
 		<app-pacientes-table></app-pacientes-table>
 	</section>
 </app-content>
