--- a/front-end/webapp/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.scss
+++ b/front-end/webapp/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.scss
@@ -11,3 +11,10 @@ div .form-row {
 mat-form-field{
     margin-right: 20px;
 }
+
+div.form-buttons {
+	margin: 20px 0;
+	button {
+		margin-right: 10px;
+	}
+}
