--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
@@ -3,12 +3,8 @@
 	flex-direction: column;
 	width: 80%;
 
-	h2.page-title {
-		font-size: x-large;
-	}
-
 	section {
-		margin: 1vh;
+		margin: 1vh 0;
 	}
 	form {
 		mat-form-field {
@@ -19,11 +15,10 @@
 			flex-direction: row;
 			justify-content: space-between;
 			align-items: flex-end;
+			margin: 30px 0;
 			.buttons {
 				button {
-					background-color: white;
-					margin-right: 10px;
-					margin-top: 10px;
+					margin: 10px 10px 0 0;
 				}
 			}
 			.firma-buttons {
