--- a/front-end/webapp/src/app/modules/internacion/components/routes/anamnesis/anamnesis.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/routes/anamnesis/anamnesis.component.html
@@ -1,8 +1,13 @@
 <app-content width="full">
 	<div class="container-row">
 		<app-anamnesis-form></app-anamnesis-form>
-		<app-patient-card [patient]="patient$ | async">
-			<app-internment-episode-summary [internmentEpisode]="internmentEpisode$ | async" content></app-internment-episode-summary>
-		</app-patient-card>
+		<article>
+			<!-- position sticky only works with ancestors of known elements (html5)-->
+			<div class="sticky">
+				<app-patient-card [patient]="patient$ | async">
+					<app-internment-episode-summary [internmentEpisode]="internmentEpisode$ | async" content></app-internment-episode-summary>
+				</app-patient-card>
+			</div>
+		</article>
 	</div>
 </app-content>
