--- a/front-end/webapp/src/app/modules/pacientes/routes/new-patient/new-patient.component.scss
+++ b/front-end/webapp/src/app/modules/pacientes/routes/new-patient/new-patient.component.scss
@@ -11,3 +11,10 @@ mat-form-field{
 .mat-radio-button {
     @include form-radio-button;
 }
+
+div.form-buttons {
+	margin: 20px 0;
+	button {
+		margin-right: 10px;
+	}
+}
